# r2modmac-win

./: .gitignore  LICENSE  README.md  UNVERIFIED_APP_INSTRUCTIONS.txt  index.html  package-lock.json  package.json  profile_data.txt
.github/workflows/: release.yml
dist-electron/: main.js  main.js.map  modManager.js  modManager.js.map  preload.js  preload.js.map
electron/: main.ts  modManager.ts  preload.ts
src/: App.tsx  index.css  tauriAdapter.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Contents/: Info.plist
src-tauri/Contents/Resources/: icon.icns
src-tauri/src/: lib.rs
src/api/: thunderstore.ts
src/components/: CrossOverGuideModal.tsx  ExportModal.tsx  FilterPopover.tsx  GameList.tsx  Layout.tsx  ModCard.tsx  ModDetailModal.tsx  ModListItem.tsx  PreferencesModal.tsx  ProfileList.tsx  ProfileSidebar.tsx  ProgressModal.tsx  SearchBar.tsx  SettingsModal.tsx  UninstallModal.tsx  UpdateModal.tsx  VirtualizedModGrid.tsx
src/store/: useProfileStore.ts
src/types/: electron.d.ts  profile.ts
