[package]
name = "app"
version = "0.2.5"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli"] }
zip = "0.6"
walkdir = "2"
open = "5"
dirs = "5"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
regex = "1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-shell = "2.3.3"
serde_yaml = "0.9.34"
base64 = "0.22.1"
flate2 = "1.0"
chrono = "0.4.42"
